[package]
name = "home_power_monitor"
version = "0.1.0"
edition = "2024"

[features]
default = ["terminal-buttons"]
# default = []

terminal-buttons = []
gpio-buttons = []
database = ["dep:tokio-postgres"]
mqtt = ["dep:mqtt-endpoint-tokio"]
screen = ["dep:liquid_crystal"]

[dependencies]
tokio-postgres = { version = "0.7", optional = true }
mqtt-endpoint-tokio = { version = "0.6", optional = true }
liquid_crystal = { version = "0.2", features = ["async"], optional = true }


jsy-mk-194-rs = { version = "0.1", default-features = false, features = [
    "tokio-async",
] }
tokio = "1"
tokio-serial = "5"
commitment-issues = { git = "https://github.com/dysonltd/commitment-issues", version = "0.2" }
post-haste = { git = "https://github.com/petekubiak/post-haste.git", version = "0.7" }


[build-dependencies]
commitment-issues = { git = "https://github.com/dysonltd/commitment-issues", version = "0.2" }
