[package]
name = "home_power_monitor"
version = "0.1.0"
edition = "2024"

[features]
default = ["csv", "terminal-buttons", "screen", "mock-power-meter"]
# default = []

terminal-buttons = []
gpio-buttons = []
database = ["dep:tokio-postgres"]
csv = ["dep:csv-async"]
mqtt = ["dep:rumqttc"]
screen = ["dep:liquid_crystal"]

mock-power-meter = []

[dependencies]
tokio-postgres = { version = "0.7", optional = true }
rumqttc = { version = "0.25", optional = true }
liquid_crystal = { version = "0.2", features = ["async"], optional = true }
csv-async = { version = "1", optional = true, features = ["tokio"] }


jsy-mk-194-rs = { version = "0.1", default-features = false, features = [
    "tokio-async",
] }

tokio = "1"
tokio-serial = "5"
commitment-issues = { git = "https://github.com/dysonltd/commitment-issues", version = "0.2" }
post-haste = { git = "https://github.com/petekubiak/post-haste.git", version = "0.7" }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"


[build-dependencies]
commitment-issues = { git = "https://github.com/dysonltd/commitment-issues", version = "0.2" }

[patch.crates-io]
jsy-mk-194-rs = { git = "https://github.com/ScottGibb/JSY-MK-194-rs.git", rev = "323b9a7a62741497d219e81daab5302af0b0b83b" }

[dev-dependencies]
rand = "0.10"
